2007-02-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #80742
	* expression.cs: Delegate Invoke method can be called directly.

2007-02-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #80676
	* class.cs (IsEntryPoint): The Main method can have params modifier.

2007-02-04  Miguel de Icaza  <miguel@novell.com>

	* parameter.cs (Parameter, Parameters): Add Clone method.

	* anonymous.cs (Compatible): Turn method into virtual method, so
	LambdaExpression can implement a different behavior.

	(CompatibleChecks, VerifyExplicitParameterCompatibility): Factor
	out the basic checking here, so it can be used by
	LambdaExpressions.
	
	* lambda.cs: Introduce "Compatible" function that will do the
	heavy lifting.

2007-02-02  Marek Safar  <marek.safar@gmail.com>

	* attribute.cs: Unified one error message.

	* class.cs (Class): Use type attributes and not properties to test static
	class.
	(IsEntryPoint): Don's pass local variable.

	* convert.cs: Removed duplicate check.

	* decl.cs, doc.cs, ecore.cs (LookupType): Renamed to LookupNamespaceOrType.

	* driver.cs: Don't crash when soft reference does not exist.

	* namespace.cs (EnsureNamespace): Renamed to RegisterNamespace.
	(UsingEntry): Removed redundant allocation.

	* parameter.cs: Add fast path for type parameters.

	* support.cs: Don't allocate attribute when it's not used.

2007-01-30  Miguel de Icaza  <miguel@novell.com>

	* anonymous.cs
	(AnonymousMethodExpression.ImplicitStandardConversionExists): turn
	this into a virtual method, so we can override it in LambdaExpression.

	* driver.cs: Improve diagnostics in case of failure. 

	* cs-tokenizer.cs: Instead of trying to parse a type and a name,
	write a function that is slightly more complex and that parses:

	type identifier [, type identifier]* )

	The old function would return incorrectly a OPEN_PARENS_LAMBDA for
	this expression:

		(canEmpty ? i >= 0 : i > 0)

2007-01-30  Raja R Harinath  <rharinath@novell.com>
