@@ -84,7 +84,7 @@ namespace Mono.CSharp {
 			1616, 1633, 1634, 1635, 1685, 1690, 1691, 1692,
 			1717, 1718, 1720,
 			1901,
-			2002, 2023,
+			2002, 2023, 2029,
 			3005, 3012, 3018, 3019, 3021, 3022, 3023, 3026, 3027,
 #if GMCS_SOURCE
 			402, 414, 693, 1058, 1700, 3024
